# short-url

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20210522224859_hashes.sql
src/: db.rs  main.rs  routes.rs
static/: style.css
views/: input.html  layout.html  not_found.html  output.html
